--- a/index.html
+++ b/index.html
@@ -12,26 +12,40 @@
     <div id="garage">
             <table style="width:100%">
                 <tr>
-
+                    <td id="r31">31</td>
+                    <td id="r32">32</td>
+                    <td id="r33">33</td>
+                </tr>
+                    
+                <tr>
+                    <td id="r21">21</td>
+                    <td id="r22">22</td>
+                    <td id="r23">23</td>
                 </tr>
                 <tr>
-
-                </tr>
-                <tr>
-
+                    <td id="r11">11</td>
+                    <td id="r12">12</td>
+                    <td id="r13">13</td>
                 </tr>
             </table>
     </div>
 </main>
 
-<button type="button" id="addCar">Add Car</button>
+<br>
+<br>
+<br>
+<br>
+Plate Number: <input type="text" id="carNumber" name="carNumber">
+Car Model: <input type="text" id="carModel" name="carModel">
+<button type="button" id="addCar1">Push garage 1</button>
+<button type="button" id="addCar2">Push garage 2</button>
+<button type="button" id="addCar3">Push garage 3</button>
+
 <br>
 <br>
 Plate Number: <input type="text" id="plateNumber" name="plateNumber">
 <button type="button" id="removeCar">Remove Car</button>
 
 <script src="stack.js"></script>
-<script src="car.js"></script>
-<script src="index.js"></script>
 </body>
 </html>
